bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: value < is not a member of (Int, Int)
   return ((a*b)<0 && negative)||( (a,b)<(0,0) && !negative)
                                        ^