bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
   return ((a*b)<0 && negative)||( (a,b)<(0,0) && !negative)
}